service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-calculator
  labels:
    app: flask-calculator
spec:
  type: NodePort
  selector:
    app: flask-calculator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
