ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-calculator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "flask.calc"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: flask-calculator
                port:
                  number: 80
